--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,7 @@
   <% for(i in data){ %>
   <% item = data[i] %>
   <div class="bkWMgd">
-    <a href="file://<%= item.url %>" target="_blank" ><h1 style="font-size: 18px;"><%= item.title %></h1></a>
+    <a href="file://<%= item.url %>" target="_blank" ><h1 style="font-size: 18px;"><%= item.title %><img style="padding-left: 10px; width: 15px;" src="https://image.flaticon.com/icons/svg/709/709510.svg"></h1></a>
     <h3 style="font-size: 12px"><%= item.url %></h3>
   <p class="st" style="font-size: 13px;"><%= item.content %></p>
   </div>
